src/main/java/com/ecnu/synlong/interpreter/SynlongParser.java
// Generated from C:/ECNU/synTools/synlong/src/main/resources/SynlongParser.g4 by ANTLR 4.13.1
package com.ecnu.synlong.interpreter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SynlongParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL=1, CHAR=2, BYTE=3, UBYTE=4, SHORT=5, USHORT=6, INT=7, UINT=8, LONG=9, 
		ULONG=10, FLOAT=11, REAL=12, CARET=13, COMMA=14, COLON=15, SEMI=16, ADD=17, 
		MINUS=18, MULTIPLY=19, DIVIDE=20, EQ=21, NEQ=22, LT=23, LTE=24, GT=25, 
		GTE=26, ARROW=27, PATHSEG=28, ELLIPSE=29, DIESE=30, DPATTEN=31, SEGREGATION=32, 
		DOT=33, NOT=34, DIV=35, MOD=36, AND=37, OR=38, XOR=39, LSHIFT=40, RSHIFT=41, 
		LP=42, RP=43, LB=44, RB=45, LBB=46, RBB=47, CONCAT=48, TYPE=49, CONST=50, 
		FUNC=51, NODE=52, IMPORTED=53, ENUM=54, RETURNS=55, AUTOMATON=56, MATCH=57, 
		INITIAL=58, FINAL=59, STATE=60, UNLESS=61, UNTIL=62, DO=63, RESUME=64, 
		RESTART=65, LAST=66, PRE=67, FBY=68, IF=69, THEN=70, ELSE=71, WHEN=72, 
		CASE=73, OF=74, DEFAULT=75, FLATTEN=76, MAKE=77, WITH=78, NOR=79, MAP=80, 
		MAPI=81, FOLD=82, FOLDI=83, MAPW=84, MAPWI=85, FOLDW=86, FOLDWI=87, MAPFOLD=88, 
		MERGE=89, ACTIVATE=90, VAR=91, LET=92, TEL=93, ASSIGN=94, UPLUS=95, UMINUS=96, 
		UNOT=97, UNARYSHORT=98, UNARYFLOAT=99, UNARYINT=100, UNARYREAL=101, BPLUS=102, 
		BMINUS=103, BMULTI=104, BDIVIDE=105, BMOD=106, BDIV=107, BEQ=108, BNEQ=109, 
		BLT=110, BLE=111, BGT=112, BGE=113, BAND=114, BOR=115, BXOR=116, BoolLiteral=117, 
		CharacterLiteral=118, IntegerLiteral=119, UnsignedIntegerLiteral=120, 
		FloatLiteral=121, RealLiteral=122, UnsignedShortLiteral=123, ShortLiteral=124, 
		ID=125, COMMENT=126, LINE_COMMENT=127, WS=128;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_typeBlock = 2, RULE_typeDecl = 3, 
		RULE_typeDef = 4, RULE_typeExpr = 5, RULE_fieldDecl = 6, RULE_typevar = 7, 
		RULE_constBlock = 8, RULE_constDecl = 9, RULE_constExpr = 10, RULE_constList = 11, 
		RULE_constLabelExpr = 12, RULE_varDecls = 13, RULE_varId = 14, RULE_whenDecl = 15, 
		RULE_clockExpr = 16, RULE_lastDecl = 17, RULE_userOpDecl = 18, RULE_opKind = 19, 
		RULE_params = 20, RULE_args = 21, RULE_opBody = 22, RULE_localBlock = 23, 
		RULE_equation = 24, RULE_lhs = 25, RULE_lhsId = 26, RULE_return = 27, 
		RULE_returnsVar = 28, RULE_stateMachine = 29, RULE_stateDecl = 30, RULE_dataDef = 31, 
		RULE_transition = 32, RULE_clockedBlock = 33, RULE_ifBlock = 34, RULE_matchBlock = 35, 
		RULE_expr = 36, RULE_list = 37, RULE_tempoExpr = 38, RULE_boolExpr = 39, 
		RULE_arrayExpr = 40, RULE_structExpr = 41, RULE_mixedConstructor = 42, 
		RULE_labelExpr = 43, RULE_index = 44, RULE_labelOrIndex = 45, RULE_switchExpr = 46, 
		RULE_caseExpr = 47, RULE_pattern = 48, RULE_applyExpr = 49, RULE_prefixOp = 50, 
		RULE_prefixUnaryOp = 51, RULE_prefixBinaryOp = 52, RULE_iterator = 53, 
		RULE_simpleExpr = 54, RULE_unaryArithOp = 55, RULE_binArithOp = 56, RULE_binRelationOp = 57, 
		RULE_binBoolOp = 58, RULE_atom = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "typeBlock", "typeDecl", "typeDef", "typeExpr", 
			"fieldDecl", "typevar", "constBlock", "constDecl", "constExpr", "constList", 
			"constLabelExpr", "varDecls", "varId", "whenDecl", "clockExpr", "lastDecl", 
			"userOpDecl", "opKind", "params", "args", "opBody", "localBlock", "equation", 
			"lhs", "lhsId", "return", "returnsVar", "stateMachine", "stateDecl", 
			"dataDef", "transition", "clockedBlock", "ifBlock", "matchBlock", "expr", 
			"list", "tempoExpr", "boolExpr", "arrayExpr", "structExpr", "mixedConstructor", 
			"labelExpr", "index", "labelOrIndex", "switchExpr", "caseExpr", "pattern", 
			"applyExpr", "prefixOp", "prefixUnaryOp", "prefixBinaryOp", "iterator", 
			"simpleExpr", "unaryArithOp", "binArithOp", "binRelationOp", "binBoolOp", 
			"atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'char'", "'byte'", "'ubyte'", "'short'", "'ushort'", 
			"'int'", "'uint'", "'long'", "'ulong'", "'float'", "'real'", "'^'", "','", 
			"':'", "';'", "'+'", "'-'", "'*'", "'/'", "'=='", "'<>'", "'<'", "'<='", 
			"'>'", "'>='", "'->'", "'::'", "'..'", "'#'", "'_'", "'\\u9225\\u65BA??'", 
			"'.'", "'not'", "'div'", "'mod'", "'and'", "'or'", "'xor'", "'<<'", "'>>'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'@'", "'type'", "'const'", 
			"'function'", "'node'", "'imported'", "'enum'", "'returns'", "'automaton'", 
			"'match'", "'initial'", "'final'", "'state'", "'unless'", "'until'", 
			"'do'", "'resume'", "'restart'", "'last'", "'pre'", "'fby'", "'if'", 
			"'then'", "'else'", "'when'", "'case'", "'of'", "'default'", "'flatten'", 
			"'make'", "'with'", "'nor'", "'map'", "'mapi'", "'fold'", "'foldi'", 
			"'mapw'", "'mapwi'", "'foldw'", "'foldwi'", "'mapfold'", "'merge'", "'activate'", 
			"'var'", "'let'", "'tel'", "'='", "'+$'", "'-$'", "'not$'", "'short$'", 
			"'float$'", "'int$'", "'real$'", "'$+$'", "'$-$'", "'$*$'", "'$/$'", 
			"'$mod$'", "'$div$'", "'$=$'", "'$<>$'", "'$<$'", "'$<=$'", "'$>$'", 
			"'$>=$'", "'$and$'", "'$or$'", "'$xor$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL", "CHAR", "BYTE", "UBYTE", "SHORT", "USHORT", "INT", "UINT", 
			"LONG", "ULONG", "FLOAT", "REAL", "CARET", "COMMA", "COLON", "SEMI", 
			"ADD", "MINUS", "MULTIPLY", "DIVIDE", "EQ", "NEQ", "LT", "LTE", "GT", 
			"GTE", "ARROW", "PATHSEG", "ELLIPSE", "DIESE", "DPATTEN", "SEGREGATION", 
			"DOT", "NOT", "DIV", "MOD", "AND", "OR", "XOR", "LSHIFT", "RSHIFT", "LP", 
			"RP", "LB", "RB", "LBB", "RBB", "CONCAT", "TYPE", "CONST", "FUNC", "NODE", 
			"IMPORTED", "ENUM", "RETURNS", "AUTOMATON", "MATCH", "INITIAL", "FINAL", 
			"STATE", "UNLESS", "UNTIL", "DO", "RESUME", "RESTART", "LAST", "PRE", 
			"FBY", "IF", "THEN", "ELSE", "WHEN", "CASE", "OF", "DEFAULT", "FLATTEN", 
			"MAKE", "WITH", "NOR", "MAP", "MAPI", "FOLD", "FOLDI", "MAPW", "MAPWI", 
			"FOLDW", "FOLDWI", "MAPFOLD", "MERGE", "ACTIVATE", "VAR", "LET", "TEL", 
			"ASSIGN", "UPLUS", "UMINUS", "UNOT", "UNARYSHORT", "UNARYFLOAT", "UNARYINT", 
			"UNARYREAL", "BPLUS", "BMINUS", "BMULTI", "BDIVIDE", "BMOD", "BDIV", 
			"BEQ", "BNEQ", "BLT", "BLE", "BGT", "BGE", "BAND", "BOR", "BXOR", "BoolLiteral", 
			"CharacterLiteral", "IntegerLiteral", "UnsignedIntegerLiteral", "FloatLiteral", 
			"RealLiteral", "UnsignedShortLiteral", "ShortLiteral", "ID", "COMMENT", 
			"LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SynlongParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SynlongParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SynlongParser.EOF, 0); }
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8444249301319680L) != 0)) {
				{
				{
				setState(120);
				declarations();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public TypeBlockContext typeBlock() {
			return getRuleContext(TypeBlockContext.class,0);
		}
		public ConstBlockContext constBlock() {
			return getRuleContext(ConstBlockContext.class,0);
		}
		public UserOpDeclContext userOpDecl() {
			return getRuleContext(UserOpDeclContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				typeBlock();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				constBlock();
				}
				break;
			case FUNC:
			case NODE:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				userOpDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeBlockContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(SynlongParser.TYPE, 0); }
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(SynlongParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(SynlongParser.SEMI, i);
		}
		public TypeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterTypeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitTypeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitTypeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeBlockContext typeBlock() throws RecognitionException {
		TypeBlockContext _localctx = new TypeBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(TYPE);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(134);
				typeDecl();
				setState(135);
				match(SEMI);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SynlongParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(SynlongParser.ASSIGN, 0); }
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(ID);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(143);
				match(ASSIGN);
				setState(144);
				typeDef();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDefContext extends ParserRuleContext {
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public TerminalNode ENUM() { return getToken(SynlongParser.ENUM, 0); }
		public TerminalNode LBB() { return getToken(SynlongParser.LBB, 0); }
		public List<TerminalNode> ID() { return getTokens(SynlongParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SynlongParser.ID, i);
		}
		public TerminalNode RBB() { return getToken(SynlongParser.RBB, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SynlongParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SynlongParser.COMMA, i);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitTypeDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitTypeDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeDef);
		int _la;
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case CHAR:
			case BYTE:
			case SHORT:
			case USHORT:
			case INT:
			case UINT:
			case LONG:
			case ULONG:
			case FLOAT:
			case REAL:
			case LBB:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				typeExpr(0);
				}
				break;
			case ENUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(ENUM);
				setState(149);
				match(LBB);
				setState(150);
				match(ID);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(151);
					match(COMMA);
					setState(152);
					match(ID);
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(158);
				match(RBB);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeExprContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(SynlongParser.BOOL, 0); }
		public TerminalNode CHAR() { return getToken(SynlongParser.CHAR, 0); }
		public TerminalNode BYTE() { return getToken(SynlongParser.BYTE, 0); }
		public TerminalNode SHORT() { return getToken(SynlongParser.SHORT, 0); }
		public TerminalNode INT() { return getToken(SynlongParser.INT, 0); }
		public TerminalNode UINT() { return getToken(SynlongParser.UINT, 0); }
		public TerminalNode LONG() { return getToken(SynlongParser.LONG, 0); }
		public TerminalNode ULONG() { return getToken(SynlongParser.ULONG, 0); }
		public TerminalNode FLOAT() { return getToken(SynlongParser.FLOAT, 0); }
		public TerminalNode REAL() { return getToken(SynlongParser.REAL, 0); }
		public TerminalNode USHORT() { return getToken(SynlongParser.USHORT, 0); }
		public TypevarContext typevar() {
			return getRuleContext(TypevarContext.class,0);
		}
		public TerminalNode LBB() { return getToken(SynlongParser.LBB, 0); }
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public TerminalNode RBB() { return getToken(SynlongParser.RBB, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SynlongParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SynlongParser.COMMA, i);
		}
		public TypeExprContext typeExpr() {
			return getRuleContext(TypeExprContext.class,0);
		}
		public TerminalNode CARET() { return getToken(SynlongParser.CARET, 0); }
		public ConstExprContext constExpr() {
			return getRuleContext(ConstExprContext.class,0);
		}
		public TypeExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).enterTypeExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SynlongParserListener ) ((SynlongParserListener)listener).exitTypeExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SynlongParserVisitor ) return ((SynlongParserVisitor<? extends T>)visitor).visitTypeExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeExprContext typeExpr() throws RecognitionException {
		return typeExpr(0);
	}
